@@ -1,4 +1,13 @@
-﻿ShareX 8.4.1 - 2013-12-05
+﻿ShareX 8.5 - 2014-01-25
+ 
+ * Added new tool to test the screen for backlight bleeding and dead pixels
+ * Updated ImageShack uploader to support their latest API
+ * Added MediaCrush image uploader support (thanks Drew DeVault)
+ * Added option for toast notifications 
+ * Added bit.ly user account support
+ * Added UI support to modify personal path
+
+ShareX 8.4.1 - 2013-12-05
 
 If you are using ShareX 8.4.0, please manually download and install this version. Auto-updater will not automatically update to this version from ShareX 8.4.0. All other previous versions of ShareX are unaffected. 
 
